Fix HTML encoding issues in ex3.html

--- a/ex3.html
+++ b/ex3.html
@@ -11,7 +11,7 @@
     <button onclick="lancerQuiz()">Démarrer le Quiz</button>
     <script>
         const QUESTIONS = [
-            ["Quelle est la capitale de la France?", "Paris"], // [cite: 12]
+            ["Quelle est la capitale de la France?", "Paris"], 
             ["Combien font 2 + 2 ?", "4"],
             ["Quel langage est utilisé pour rendre les sites web interactifs ?", "JavaScript"],
             ["Quelle est lanne de lamarche vire ?", "1975"],
@@ -40,4 +40,5 @@
         }
     </script>
 </body>
+
 </html>
